different constallations in webpack configs

--- a/packages/shell/src/index.html
+++ b/packages/shell/src/index.html
@@ -10,6 +10,10 @@
         <li><a id="flights">Flights</a></li>
     </ul>
 
+    <p>
+        Shared lib version: <span id="version"></span>
+    </p>
+
     <p id="container">
 
     </p>
