--- a/packages/shell/src/index.html
+++ b/packages/shell/src/index.html
@@ -18,6 +18,6 @@
 
     </p>
 
-    <script src="http://localhost:3000/remoteEntry.js"></script>
+    <!-- <script src="http://localhost:3000/remoteEntry.js"></script> -->
 </body>
 </html>
