2 container with different versions

--- a/packages/shell/src/index.html
+++ b/packages/shell/src/index.html
@@ -7,7 +7,10 @@
 
     <ul>
         <li><a id="home">Home</a></li>
-        <li><a id="flights">Flights</a></li>
+        <li><a id="flights1">Flights</a></li>
+        <li><a id="flights2">More Flights</a></li>
+        <li><a id="flights3">Furhter Flights</a></li>
+
     </ul>
 
     <p>
@@ -15,9 +18,11 @@
     </p>
 
     <p id="container">
-
     </p>
 
     <script src="http://localhost:3000/remoteEntry.js"></script>
+    <script src="http://localhost:3001/remoteEntry.js"></script>
+    <script src="http://localhost:3002/remoteEntry.js"></script>
+
 </body>
 </html>
